amend headline, fix icons getting cut off in chrome

--- a/style/home.less
+++ b/style/home.less
@@ -59,13 +59,14 @@
 		margin-bottom: 2.4em;
 	}
 	i {
-		vertical-align: middle; margin: 0 0.4em 0 0;
-		opacity: 0.4; font-size: 1.5em;
+		vertical-align: middle; margin: 0 0.4em 0 0.03em;
+		opacity: 0.4; font-size: 1.4em;
 	}
 	h3 {
 		.cutoff; .alt-font; letter-spacing: -0.03em;
 		font-weight: normal; font-size: 1.3em;
 		margin: 0 0 0.2em; color: #fff;
+		padding: 0.1em;
 	}
 	h4 {
 		.clear;
