--- a/style/product.less
+++ b/style/product.less
@@ -143,7 +143,7 @@
 	}
 	hr {
 		height: 7px; opacity: 0.25;
-		margin-bottom: 2.8em;
+		margin-bottom: 2.74em;
 	}
 	i {
 		vertical-align: middle; margin: 0 0.4em 0 0;
@@ -153,7 +153,7 @@
 		.cutoff; text-transform: uppercase;
 		font-size: 1.25em; font-weight: normal;
 		margin: 0 0 0.2em; color: #fff;
-		padding-top: 0.04em;
+		padding: 0.1em 0 0 0.03em;
 		letter-spacing: 0.02em;
 	}
 	p {
